--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-    <link rel="icon" href="/favicon-32x32.png" type="image/x-icon">
+    <!-- <link rel="icon" href="p/favicon-32x32.png" type="image/x-icon"> -->
+    <link rel="icon" href="/favicon-32x32.png" type="image/png">
     <script src="https://kit.fontawesome.com/5f706d202e.js" crossorigin="anonymous"></script>
     <script defer src="app.js"></script>
   </head>
