--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <link rel="icon" href="./favicon-32x32.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/5f706d202e.js" crossorigin="anonymous"></script>
     <script defer src="app.js"></script>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5MYHW4VNF1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-5MYHW4VNF1');
+  </script>
   </head>
   <body>
     <div class="wrapper">
